--- a/portfolio2022/src/style/style.scss
+++ b/portfolio2022/src/style/style.scss
@@ -1,6 +1,106 @@
 @import "common.scss";
 @import "root.scss";
+@import "font.scss";
 
-.test{
-    color:red;
+html,body{
+    width:100%;
+    height:100%;
+    font-size: 100%;
+    font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
+}
+
+body{
+    height:100%;
+    
+}
+
+#root{
+    height:100%;
+}
+.App{
+    display:grid;
+    grid-template-columns: 1fr 6fr;
+    height:100%;
+    
+}
+
+header{
+    position: relative;
+    background: $white;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    z-index:1;
+}
+
+header .title{
+    padding:1.6rem 1.25rem;
+    text-align: left;
+    border-bottom: 1px solid $grayVeryLight;
+    .logo{
+        display:inline-block;
+        position:relative;
+        padding:0.3rem 0 0.3rem 3rem;
+        font-size:1.05rem;
+        font-family: 'SuseongDotum';
+        &:before{
+            @include bef;
+            width:2.3rem;
+            height:2.3rem;
+            border-radius: 100%;
+            background: linear-gradient(130deg, rgba(65,111,233,1) 0%, rgba(100,71,240,1) 100%);
+        }
+        b{
+            margin-top:0.13rem;
+            font-size:0.85rem;
+            font-family: Pretendard;
+            color:#ababab;
+        }
+    }
+}
+
+header .content{
+    padding:1.6rem 1.8rem;
+    
+}
+
+
+.nav-list{
+    li{
+        position: relative;
+        padding: 0.938rem 0 0.938rem 2.4rem;
+        text-align: left;
+        color: $grayLight;
+        &:before{
+            @include bef;            
+            @include centerVertical;            
+            font-family: uicons-solid-rounded !important;
+            font-style: normal;
+            font-weight: normal !important;
+            font-variant: normal;
+            text-transform: none;
+            line-height: 1;
+            -webkit-font-smoothing: antialiased;
+            content: "\f2da";
+        }
+    }
+    li:nth-of-type(2){
+        &:before{
+            content: "\f25c";
+        }
+    }
+    li:nth-of-type(3){
+        &:before{
+            font-family: uicons-brands !important;
+            content: "\f159";
+        }
+    }
+    li:nth-of-type(4){
+        &:before{
+            content: "\f1d1";
+        }
+    }
+}
+
+.wrap{
+    position: relative;
+    background: $purpleLight;
 }
