--- a/portfolio2022/src/style/font.scss
+++ b/portfolio2022/src/style/font.scss
@@ -7,6 +7,8 @@
     font-style: normal;
 }
 
+
+/* FLATICON */
 @import url('https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css');
 @import url('https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css');
 @import url('https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css');
