--- a/portfolio2022/src/style/root.scss
+++ b/portfolio2022/src/style/root.scss
@@ -10,12 +10,19 @@
 }
 
 /* variables */
+$mainFont: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
+$logoFont: 'SuseongDotum';
 $white: #fff;
 $purple: #6449EF;
-$purpleLight: #E9EBF2;
+$purpleLight: #8A83CD;
+$purpleVeryLight: #EDECFF;
+$purpleVVeryLight: #E9EBF2;
 $gray: #aeaeae;
 $grayLight: #a6a6a6;
 $grayVeryLight: #f5f5f5;
+
+$gradientBtoP : linear-gradient(130deg, rgba(65,111,233,1) 0%, rgba(100,71,240,1) 100%);
+$boxShadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 /* function */
 
 
