--- a/portfolio2022/src/style/style.scss
+++ b/portfolio2022/src/style/style.scss
@@ -123,6 +123,10 @@ header .title{
     background: $purpleVVeryLight;
 }
 
+section ~ section{
+    margin-top:3.6rem;
+}
+
 .year{
     text-align: right;
     .year-btn{
@@ -149,11 +153,8 @@ header .title{
     grid-template-columns: repeat(3, 1fr);
     column-gap: 1.4rem;
     li{
-        position:relative;
+        @include shadowBox;
         padding: 2rem 1.6rem 2rem 5.2rem;
-        background: #fff;
-        border-radius: 1.25rem;
-        box-shadow: $boxShadow;
         text-align: left;
         &:before{
             @include bef;
@@ -180,5 +181,35 @@ header .title{
     }
     li:nth-of-type(3):before{
         background-image: url('../images/skill_icon_03.gif');
+    }
+}
+
+.full-box{
+    @include shadowBox;
+}
+
+.chart-box .x-axis{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    text-align: right;
+    li{
+        border-right: 1px solid #000;
+    }
+    
+}
+
+.chart-box .chart-list{
+    display: grid;
+    grid-template-columns: repeat(100, 1fr);
+    grid-auto-flow: column dense;
+    li{
+        grid-column: 1 / 26;
+        background: $purpleVeryLight;
+    }
+    li:nth-of-type(2){
+        grid-column: 24 / 86;
+    }
+    li:nth-of-type(3){
+        grid-column: 14 / 100;
     }
 }
