--- a/portfolio2022/src/style/root.scss
+++ b/portfolio2022/src/style/root.scss
@@ -516,6 +516,11 @@ $boxShadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6
     box-shadow: $boxShadow;
 }
 
+@mixin textIndent(){
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+}
 
 @mixin tablet{ 
     @media (max-width: 1023px){
