--- a/portfolio2022/src/style/root.scss
+++ b/portfolio2022/src/style/root.scss
@@ -125,115 +125,24 @@ $boxShadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6
     }
 }
 
-
-
-@mixin list($titleWidth){
-    li{
-        display:flex;
-        width:100%;
-        b{
-            width: $titleWidth;
-            padding-right:2rem;
-            font-size:1.1rem;
-            font-weight: 600;
-            line-height: 1.3;
-            color: var(--default-color);
-        }
-        span{
-            width: calc(100% - $titleWidth);
-            font-size:1.1rem;
-            font-weight: 400;
-            line-height: 1.3;
-        }
+@mixin search($searchHeight, $btnWidth){
+    display:flex;
+    height: $searchHeight;
+    input{
+        width: calc(100% - $btnWidth);
+        height: 100%;
+        padding: 0 0.7rem;
     }
-    li ~ li{
-        margin-top: 0.4rem;
+    span{
+        @include center;
+        width: $btnWidth;
+        height: 100%;
+        margin-left: 0.2rem;
+        cursor:pointer; 
     }
 }
 
-@mixin barList(){
-    li{
-        position: relative;
-    }
-    li ~ li{
-        margin-left: 0.5rem;
-        padding-left: 0.5rem;
-        &:before{
-            @include bef;
-            width:1px;
-            height: 80%;
-            top: 6%;
-            background: var(--default-color);
-        }
-    }
-}
 
-@mixin dotList(){
-    li{
-        display:flex;
-        position: relative;
-        padding-left: 0.8rem;
-        &:before{
-            position: absolute;
-            top: 50%;
-            left: 0;
-            width: 0.2rem;
-            height: 0.2rem;
-            content: '';
-            transform: translateY(-50%);
-            background: var(--default-color);
-            border-radius: 50%;
-        }
-    }
-    li ~ li{
-        margin-top: 0.4rem;
-    }
-}
-
-@mixin dashList(){
-    @include dotList;
-    li{
-        &:before{
-            width: 0.3rem;
-            height: 1px;
-            border-radius: 0;
-        }
-    }
-}
-
-@mixin innerDot(){
-    padding-left:0;
-    &:before{
-        display: none;
-    }
-    > b{
-        position: relative;
-        height: 1.6rem;
-        padding-left: 0.8rem;
-        &:before{
-            position: absolute;
-            top: 50%;
-            left: 0;
-            width: 0.2rem;
-            height: 0.2rem;
-            content: '';
-            transform: translateY(-50%);
-            background: var(--default-color);
-            border-radius: 50%;
-        }
-    }
-}
-
-@mixin innerDash(){
-    @include innerDot;
-    > b{
-        &:before{
-            width: 0.3rem;
-            height: 1px;
-            border-radius: 0;
-        }
-    }
-}
 
 @mixin buttonRow(){
     display:flex;
@@ -271,57 +180,6 @@ $boxShadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6
     }
 }
 
-@mixin radio(){
-    input[type=radio]{
-        display:none;
-    }
-    input[type=radio] + label{
-        display: inline-block;
-        position: relative;
-        padding-left: 1.1rem;
-        font-size: 0.933rem;
-        line-height: 1.25;
-        color:#333;
-        cursor: pointer;
-        &:before{
-            content:"\f0c8";
-            position: absolute;
-            top:0;
-            left:0;
-            font-family: 'Font Awesome 5 Free';
-        }
-    }
-    input[type=radio]:checked + label:before{
-        content: "\f14a";
-    }
-}
-
-@mixin radioBtn(){
-    input[type=radio]{
-        display:none;
-    }
-    input[type=radio] + label{
-        position: relative;
-        em{
-            width: 100%;
-            height: auto;
-            padding: 1rem 0.3rem;
-            cursor:pointer;
-        }
-        span{
-            position: absolute;
-            top:0;
-            left:0;
-            text-align: center;
-            background: skyblue;
-        }
-    }
-    input[type=radio]:checked + label{
-        span{
-            background: blue;
-        }
-    }  
-}
 
 @mixin tab(){
     display:flex;
